p5/info/y.output
Terminals unused in grammar

    TOK_ERROR


Grammar

    0 $accept: program $end

    1 program: TOK_MAIN TOK_LLAVEIZQUIERDA declarations er1 functions er2 statements TOK_LLAVEDERECHA

    2 er1: %empty

    3 er2: %empty

    4 declarations: declaration
    5             | declaration declarations

    6 declaration: class identifiers TOK_PUNTOYCOMA

    7 class: class_scalar
    8      | class_vector

    9 class_scalar: type

   10 type: TOK_INT
   11     | TOK_BOOLEAN

   12 class_vector: TOK_ARRAY type TOK_CORCHETEIZQUIERDO constant_int TOK_CORCHETEDERECHO

   13 identifiers: identifier
   14            | identifier TOK_COMA identifiers

   15 functions: function functions
   16          | %empty

   17 function: fer1 TOK_LLAVEDERECHA

   18 fn_name: TOK_FUNCTION type TOK_IDENTIFICADOR

   19 fn_declarations: fn_name TOK_PARENTESISIZQUIERDO function_params TOK_PARENTESISDERECHO

   20 fer1: fer2 statements

   21 fer2: fn_declarations TOK_LLAVEIZQUIERDA function_declarations

   22 function_params: function_param remaining_function_params
   23                | %empty

   24 remaining_function_params: TOK_PUNTOYCOMA function_param remaining_function_params
   25                          | %empty

   26 function_param: type function_param_identifier

   27 function_param_identifier: TOK_IDENTIFICADOR

   28 function_declarations: declarations
   29                      | %empty

   30 statements: statement
   31           | statement statements

   32 statement: simple_statement TOK_PUNTOYCOMA
   33          | block

   34 simple_statement: assignment
   35                 | reading
   36                 | writing
   37                 | function_return

   38 block: conditional
   39      | loop

   40 assignment: TOK_IDENTIFICADOR TOK_ASIGNACION exp
   41           | vector_element TOK_ASIGNACION exp

   42 vector_element: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

   43 conditional: if_exp_stm
   44            | if_exp_stm TOK_ELSE TOK_LLAVEIZQUIERDA statements TOK_LLAVEDERECHA

   45 if_exp_stm: if_exp statements TOK_LLAVEDERECHA

   46 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

   47 loop: while_exp TOK_LLAVEIZQUIERDA statements TOK_LLAVEDERECHA

   48 while_exp: while TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO

   49 while: TOK_WHILE

   50 reading: TOK_SCANF TOK_IDENTIFICADOR

   51 writing: TOK_PRINTF exp

   52 function_return: TOK_RETURN exp

   53 exp: exp TOK_MAS exp
   54    | exp TOK_MENOS exp
   55    | exp TOK_DIVISION exp
   56    | exp TOK_ASTERISCO exp
   57    | TOK_MENOS exp
   58    | exp TOK_AND exp
   59    | exp TOK_OR exp
   60    | TOK_NOT exp
   61    | TOK_IDENTIFICADOR
   62    | constant
   63    | TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO
   64    | TOK_PARENTESISIZQUIERDO comparison TOK_PARENTESISDERECHO
   65    | vector_element
   66    | fidf_funct_call TOK_PARENTESISIZQUIERDO exp_list TOK_PARENTESISDERECHO

   67 fidf_funct_call: TOK_IDENTIFICADOR

   68 exp_list: exp exp_remaining_list
   69         | %empty

   70 exp_remaining_list: TOK_COMA exp exp_remaining_list
   71                   | %empty

   72 comparison: exp TOK_IGUAL exp
   73           | exp TOK_DISTINTO exp
   74           | exp TOK_MENORIGUAL exp
   75           | exp TOK_MAYORIGUAL exp
   76           | exp TOK_MENOR exp
   77           | exp TOK_MAYOR exp

   78 constant: constant_logic
   79         | constant_int

   80 constant_logic: TOK_TRUE
   81               | TOK_FALSE

   82 constant_int: TOK_CONSTANTE_ENTERA

   83 identifier: TOK_IDENTIFICADOR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOK_MAIN (258) 1
    TOK_INT (259) 10
    TOK_BOOLEAN (260) 11
    TOK_ARRAY (261) 12
    TOK_FUNCTION (262) 18
    TOK_IF (263) 46
    TOK_ELSE (264) 44
    TOK_WHILE (265) 49
    TOK_SCANF (266) 50
    TOK_PRINTF (267) 51
    TOK_RETURN (268) 52
    TOK_PUNTOYCOMA (269) 6 24 32
    TOK_COMA (270) 14 70
    TOK_PARENTESISIZQUIERDO (271) 19 46 48 63 64 66
    TOK_PARENTESISDERECHO (272) 19 46 48 63 64 66
    TOK_CORCHETEIZQUIERDO (273) 12 42
    TOK_CORCHETEDERECHO (274) 12 42
    TOK_LLAVEIZQUIERDA (275) 1 21 44 46 47
    TOK_LLAVEDERECHA (276) 1 17 44 45 47
    TOK_ASIGNACION (277) 40 41
    TOK_MAS (278) 53
    TOK_MENOS (279) 54 57
    TOK_ASTERISCO (280) 56
    TOK_DIVISION (281) 55
    TOK_MENOR (282) 76
    TOK_MAYOR (283) 77
    TOK_AND (284) 58
    TOK_OR (285) 59
    TOK_NOT (286) 60
    TOK_IGUAL (287) 72
    TOK_DISTINTO (288) 73
    TOK_MENORIGUAL (289) 74
    TOK_MAYORIGUAL (290) 75
    TOK_TRUE (291) 80
    TOK_FALSE (292) 81
    TOK_ERROR (293)
    MENOSU (294)
    TOK_CONSTANTE_ENTERA <attrs> (295) 82
    TOK_IDENTIFICADOR <attrs> (296) 18 27 40 42 50 61 67 83


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    program (43)
        on left: 1
        on right: 0
    er1 (44)
        on left: 2
        on right: 1
    er2 (45)
        on left: 3
        on right: 1
    declarations (46)
        on left: 4 5
        on right: 1 5 28
    declaration (47)
        on left: 6
        on right: 4 5
    class (48)
        on left: 7 8
        on right: 6
    class_scalar (49)
        on left: 9
        on right: 7
    type <attrs> (50)
        on left: 10 11
        on right: 9 12 18 26
    class_vector (51)
        on left: 12
        on right: 8
    identifiers (52)
        on left: 13 14
        on right: 6 14
    functions (53)
        on left: 15 16
        on right: 1 15
    function <attrs> (54)
        on left: 17
        on right: 15
    fn_name <attrs> (55)
        on left: 18
        on right: 19
    fn_declarations <attrs> (56)
        on left: 19
        on right: 21
    fer1 <attrs> (57)
        on left: 20
        on right: 17
    fer2 <attrs> (58)
        on left: 21
        on right: 20
    function_params (59)
        on left: 22 23
        on right: 19
    remaining_function_params (60)
        on left: 24 25
        on right: 22 24
    function_param (61)
        on left: 26
        on right: 22 24
    function_param_identifier <attrs> (62)
        on left: 27
        on right: 26
    function_declarations (63)
        on left: 28 29
        on right: 21
    statements (64)
        on left: 30 31
        on right: 1 20 31 44 45 47
    statement (65)
        on left: 32 33
        on right: 30 31
    simple_statement (66)
        on left: 34 35 36 37
        on right: 32
    block (67)
        on left: 38 39
        on right: 33
    assignment (68)
        on left: 40 41
        on right: 34
    vector_element <attrs> (69)
        on left: 42
        on right: 41 65
    conditional <attrs> (70)
        on left: 43 44
        on right: 38
    if_exp_stm <attrs> (71)
        on left: 45
        on right: 43 44
    if_exp <attrs> (72)
        on left: 46
        on right: 45
    loop <attrs> (73)
        on left: 47
        on right: 39
    while_exp <attrs> (74)
        on left: 48
        on right: 47
    while <attrs> (75)
        on left: 49
        on right: 48
    reading (76)
        on left: 50
        on right: 35
    writing (77)
        on left: 51
        on right: 36
    function_return (78)
        on left: 52
        on right: 37
    exp <attrs> (79)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66
        on right: 40 41 42 46 48 51 52 53 54 55 56 57 58 59 60 63 68 70 72 73 74 75 76 77
    fidf_funct_call <attrs> (80)
        on left: 67
        on right: 66
    exp_list (81)
        on left: 68 69
        on right: 66
    exp_remaining_list (82)
        on left: 70 71
        on right: 68 70
    comparison <attrs> (83)
        on left: 72 73 74 75 76 77
        on right: 64
    constant <attrs> (84)
        on left: 78 79
        on right: 62
    constant_logic <attrs> (85)
        on left: 80 81
        on right: 78
    constant_int <attrs> (86)
        on left: 82
        on right: 12 79
    identifier <attrs> (87)
        on left: 83
        on right: 13 14


State 0

    0 $accept: . program $end

    TOK_MAIN  shift, and go to state 1

    program  go to state 2


State 1

    1 program: TOK_MAIN . TOK_LLAVEIZQUIERDA declarations er1 functions er2 statements TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: TOK_MAIN TOK_LLAVEIZQUIERDA . declarations er1 functions er2 statements TOK_LLAVEDERECHA

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6
    TOK_ARRAY    shift, and go to state 7

    declarations  go to state 8
    declaration   go to state 9
    class         go to state 10
    class_scalar  go to state 11
    type          go to state 12
    class_vector  go to state 13


State 4

    0 $accept: program $end .

    $default  accept


State 5

   10 type: TOK_INT .

    $default  reduce using rule 10 (type)


State 6

   11 type: TOK_BOOLEAN .

    $default  reduce using rule 11 (type)


State 7

   12 class_vector: TOK_ARRAY . type TOK_CORCHETEIZQUIERDO constant_int TOK_CORCHETEDERECHO

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6

    type  go to state 14


State 8

    1 program: TOK_MAIN TOK_LLAVEIZQUIERDA declarations . er1 functions er2 statements TOK_LLAVEDERECHA

    $default  reduce using rule 2 (er1)

    er1  go to state 15


State 9

    4 declarations: declaration .
    5             | declaration . declarations

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6
    TOK_ARRAY    shift, and go to state 7

    $default  reduce using rule 4 (declarations)

    declarations  go to state 16
    declaration   go to state 9
    class         go to state 10
    class_scalar  go to state 11
    type          go to state 12
    class_vector  go to state 13


State 10

    6 declaration: class . identifiers TOK_PUNTOYCOMA

    TOK_IDENTIFICADOR  shift, and go to state 17

    identifiers  go to state 18
    identifier   go to state 19


State 11

    7 class: class_scalar .

    $default  reduce using rule 7 (class)


State 12

    9 class_scalar: type .

    $default  reduce using rule 9 (class_scalar)


State 13

    8 class: class_vector .

    $default  reduce using rule 8 (class)


State 14

   12 class_vector: TOK_ARRAY type . TOK_CORCHETEIZQUIERDO constant_int TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 20


State 15

    1 program: TOK_MAIN TOK_LLAVEIZQUIERDA declarations er1 . functions er2 statements TOK_LLAVEDERECHA

    TOK_FUNCTION  shift, and go to state 21

    $default  reduce using rule 16 (functions)

    functions        go to state 22
    function         go to state 23
    fn_name          go to state 24
    fn_declarations  go to state 25
    fer1             go to state 26
    fer2             go to state 27


State 16

    5 declarations: declaration declarations .

    $default  reduce using rule 5 (declarations)


State 17

   83 identifier: TOK_IDENTIFICADOR .

    $default  reduce using rule 83 (identifier)


State 18

    6 declaration: class identifiers . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 28


State 19

   13 identifiers: identifier .
   14            | identifier . TOK_COMA identifiers

    TOK_COMA  shift, and go to state 29

    $default  reduce using rule 13 (identifiers)


State 20

   12 class_vector: TOK_ARRAY type TOK_CORCHETEIZQUIERDO . constant_int TOK_CORCHETEDERECHO

    TOK_CONSTANTE_ENTERA  shift, and go to state 30

    constant_int  go to state 31


State 21

   18 fn_name: TOK_FUNCTION . type TOK_IDENTIFICADOR

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6

    type  go to state 32


State 22

    1 program: TOK_MAIN TOK_LLAVEIZQUIERDA declarations er1 functions . er2 statements TOK_LLAVEDERECHA

    $default  reduce using rule 3 (er2)

    er2  go to state 33


State 23

   15 functions: function . functions

    TOK_FUNCTION  shift, and go to state 21

    $default  reduce using rule 16 (functions)

    functions        go to state 34
    function         go to state 23
    fn_name          go to state 24
    fn_declarations  go to state 25
    fer1             go to state 26
    fer2             go to state 27


State 24

   19 fn_declarations: fn_name . TOK_PARENTESISIZQUIERDO function_params TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 35


State 25

   21 fer2: fn_declarations . TOK_LLAVEIZQUIERDA function_declarations

    TOK_LLAVEIZQUIERDA  shift, and go to state 36


State 26

   17 function: fer1 . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 37


State 27

   20 fer1: fer2 . statements

    TOK_IF             shift, and go to state 38
    TOK_WHILE          shift, and go to state 39
    TOK_SCANF          shift, and go to state 40
    TOK_PRINTF         shift, and go to state 41
    TOK_RETURN         shift, and go to state 42
    TOK_IDENTIFICADOR  shift, and go to state 43

    statements        go to state 44
    statement         go to state 45
    simple_statement  go to state 46
    block             go to state 47
    assignment        go to state 48
    vector_element    go to state 49
    conditional       go to state 50
    if_exp_stm        go to state 51
    if_exp            go to state 52
    loop              go to state 53
    while_exp         go to state 54
    while             go to state 55
    reading           go to state 56
    writing           go to state 57
    function_return   go to state 58


State 28

    6 declaration: class identifiers TOK_PUNTOYCOMA .

    $default  reduce using rule 6 (declaration)


State 29

   14 identifiers: identifier TOK_COMA . identifiers

    TOK_IDENTIFICADOR  shift, and go to state 17

    identifiers  go to state 59
    identifier   go to state 19


State 30

   82 constant_int: TOK_CONSTANTE_ENTERA .

    $default  reduce using rule 82 (constant_int)


State 31

   12 class_vector: TOK_ARRAY type TOK_CORCHETEIZQUIERDO constant_int . TOK_CORCHETEDERECHO

    TOK_CORCHETEDERECHO  shift, and go to state 60


State 32

   18 fn_name: TOK_FUNCTION type . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  shift, and go to state 61


State 33

    1 program: TOK_MAIN TOK_LLAVEIZQUIERDA declarations er1 functions er2 . statements TOK_LLAVEDERECHA

    TOK_IF             shift, and go to state 38
    TOK_WHILE          shift, and go to state 39
    TOK_SCANF          shift, and go to state 40
    TOK_PRINTF         shift, and go to state 41
    TOK_RETURN         shift, and go to state 42
    TOK_IDENTIFICADOR  shift, and go to state 43

    statements        go to state 62
    statement         go to state 45
    simple_statement  go to state 46
    block             go to state 47
    assignment        go to state 48
    vector_element    go to state 49
    conditional       go to state 50
    if_exp_stm        go to state 51
    if_exp            go to state 52
    loop              go to state 53
    while_exp         go to state 54
    while             go to state 55
    reading           go to state 56
    writing           go to state 57
    function_return   go to state 58


State 34

   15 functions: function functions .

    $default  reduce using rule 15 (functions)


State 35

   19 fn_declarations: fn_name TOK_PARENTESISIZQUIERDO . function_params TOK_PARENTESISDERECHO

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6

    $default  reduce using rule 23 (function_params)

    type             go to state 63
    function_params  go to state 64
    function_param   go to state 65


State 36

   21 fer2: fn_declarations TOK_LLAVEIZQUIERDA . function_declarations

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6
    TOK_ARRAY    shift, and go to state 7

    $default  reduce using rule 29 (function_declarations)

    declarations           go to state 66
    declaration            go to state 9
    class                  go to state 10
    class_scalar           go to state 11
    type                   go to state 12
    class_vector           go to state 13
    function_declarations  go to state 67


State 37

   17 function: fer1 TOK_LLAVEDERECHA .

    $default  reduce using rule 17 (function)


State 38

   46 if_exp: TOK_IF . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 68


State 39

   49 while: TOK_WHILE .

    $default  reduce using rule 49 (while)


State 40

   50 reading: TOK_SCANF . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  shift, and go to state 69


State 41

   51 writing: TOK_PRINTF . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 70
    TOK_MENOS                shift, and go to state 71
    TOK_NOT                  shift, and go to state 72
    TOK_TRUE                 shift, and go to state 73
    TOK_FALSE                shift, and go to state 74
    TOK_CONSTANTE_ENTERA     shift, and go to state 30
    TOK_IDENTIFICADOR        shift, and go to state 75

    vector_element   go to state 76
    exp              go to state 77
    fidf_funct_call  go to state 78
    constant         go to state 79
    constant_logic   go to state 80
    constant_int     go to state 81


State 42

   52 function_return: TOK_RETURN . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 70
    TOK_MENOS                shift, and go to state 71
    TOK_NOT                  shift, and go to state 72
    TOK_TRUE                 shift, and go to state 73
    TOK_FALSE                shift, and go to state 74
    TOK_CONSTANTE_ENTERA     shift, and go to state 30
    TOK_IDENTIFICADOR        shift, and go to state 75

    vector_element   go to state 76
    exp              go to state 82
    fidf_funct_call  go to state 78
    constant         go to state 79
    constant_logic   go to state 80
    constant_int     go to state 81


State 43

   40 assignment: TOK_IDENTIFICADOR . TOK_ASIGNACION exp
   42 vector_element: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 83
    TOK_ASIGNACION         shift, and go to state 84


State 44

   20 fer1: fer2 statements .

    $default  reduce using rule 20 (fer1)


State 45

   30 statements: statement .
   31           | statement . statements

    TOK_IF             shift, and go to state 38
    TOK_WHILE          shift, and go to state 39
    TOK_SCANF          shift, and go to state 40
    TOK_PRINTF         shift, and go to state 41
    TOK_RETURN         shift, and go to state 42
    TOK_IDENTIFICADOR  shift, and go to state 43

    $default  reduce using rule 30 (statements)

    statements        go to state 85
    statement         go to state 45
    simple_statement  go to state 46
    block             go to state 47
    assignment        go to state 48
    vector_element    go to state 49
    conditional       go to state 50
    if_exp_stm        go to state 51
    if_exp            go to state 52
    loop              go to state 53
    while_exp         go to state 54
    while             go to state 55
    reading           go to state 56
    writing           go to state 57
    function_return   go to state 58


State 46

   32 statement: simple_statement . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 86


State 47

   33 statement: block .

    $default  reduce using rule 33 (statement)


State 48

   34 simple_statement: assignment .

    $default  reduce using rule 34 (simple_statement)


State 49

   41 assignment: vector_element . TOK_ASIGNACION exp

    TOK_ASIGNACION  shift, and go to state 87


State 50

   38 block: conditional .

    $default  reduce using rule 38 (block)


State 51

   43 conditional: if_exp_stm .
   44            | if_exp_stm . TOK_ELSE TOK_LLAVEIZQUIERDA statements TOK_LLAVEDERECHA

    TOK_ELSE  shift, and go to state 88

    $default  reduce using rule 43 (conditional)


State 52

   45 if_exp_stm: if_exp . statements TOK_LLAVEDERECHA

    TOK_IF             shift, and go to state 38
    TOK_WHILE          shift, and go to state 39
    TOK_SCANF          shift, and go to state 40
    TOK_PRINTF         shift, and go to state 41
    TOK_RETURN         shift, and go to state 42
    TOK_IDENTIFICADOR  shift, and go to state 43

    statements        go to state 89
    statement         go to state 45
    simple_statement  go to state 46
    block             go to state 47
    assignment        go to state 48
    vector_element    go to state 49
    conditional       go to state 50
    if_exp_stm        go to state 51
    if_exp            go to state 52
    loop              go to state 53
    while_exp         go to state 54
    while             go to state 55
    reading           go to state 56
    writing           go to state 57
    function_return   go to state 58


State 53

   39 block: loop .

    $default  reduce using rule 39 (block)


State 54

   47 loop: while_exp . TOK_LLAVEIZQUIERDA statements TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 90


State 55

   48 while_exp: while . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 91


State 56

   35 simple_statement: reading .

    $default  reduce using rule 35 (simple_statement)


State 57

   36 simple_statement: writing .

    $default  reduce using rule 36 (simple_statement)


State 58

   37 simple_statement: function_return .

    $default  reduce using rule 37 (simple_statement)


State 59

   14 identifiers: identifier TOK_COMA identifiers .

    $default  reduce using rule 14 (identifiers)


State 60

   12 class_vector: TOK_ARRAY type TOK_CORCHETEIZQUIERDO constant_int TOK_CORCHETEDERECHO .

    $default  reduce using rule 12 (class_vector)


State 61

   18 fn_name: TOK_FUNCTION type TOK_IDENTIFICADOR .

    $default  reduce using rule 18 (fn_name)


State 62

    1 program: TOK_MAIN TOK_LLAVEIZQUIERDA declarations er1 functions er2 statements . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 92


State 63

   26 function_param: type . function_param_identifier

    TOK_IDENTIFICADOR  shift, and go to state 93

    function_param_identifier  go to state 94


State 64

   19 fn_declarations: fn_name TOK_PARENTESISIZQUIERDO function_params . TOK_PARENTESISDERECHO

    TOK_PARENTESISDERECHO  shift, and go to state 95


State 65

   22 function_params: function_param . remaining_function_params

    TOK_PUNTOYCOMA  shift, and go to state 96

    $default  reduce using rule 25 (remaining_function_params)

    remaining_function_params  go to state 97


State 66

   28 function_declarations: declarations .

    $default  reduce using rule 28 (function_declarations)


State 67

   21 fer2: fn_declarations TOK_LLAVEIZQUIERDA function_declarations .

    $default  reduce using rule 21 (fer2)


State 68

   46 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 70
    TOK_MENOS                shift, and go to state 71
    TOK_NOT                  shift, and go to state 72
    TOK_TRUE                 shift, and go to state 73
    TOK_FALSE                shift, and go to state 74
    TOK_CONSTANTE_ENTERA     shift, and go to state 30
    TOK_IDENTIFICADOR        shift, and go to state 75

    vector_element   go to state 76
    exp              go to state 98
    fidf_funct_call  go to state 78
    constant         go to state 79
    constant_logic   go to state 80
    constant_int     go to state 81


State 69

   50 reading: TOK_SCANF TOK_IDENTIFICADOR .

    $default  reduce using rule 50 (reading)


State 70

   63 exp: TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO
   64    | TOK_PARENTESISIZQUIERDO . comparison TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 70
    TOK_MENOS                shift, and go to state 71
    TOK_NOT                  shift, and go to state 72
    TOK_TRUE                 shift, and go to state 73
    TOK_FALSE                shift, and go to state 74
    TOK_CONSTANTE_ENTERA     shift, and go to state 30
    TOK_IDENTIFICADOR        shift, and go to state 75

    vector_element   go to state 76
    exp              go to state 99
    fidf_funct_call  go to state 78
    comparison       go to state 100
    constant         go to state 79
    constant_logic   go to state 80
    constant_int     go to state 81


State 71

   57 exp: TOK_MENOS . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 70
    TOK_MENOS                shift, and go to state 71
    TOK_NOT                  shift, and go to state 72
    TOK_TRUE                 shift, and go to state 73
    TOK_FALSE                shift, and go to state 74
    TOK_CONSTANTE_ENTERA     shift, and go to state 30
    TOK_IDENTIFICADOR        shift, and go to state 75

    vector_element   go to state 76
    exp              go to state 101
    fidf_funct_call  go to state 78
    constant         go to state 79
    constant_logic   go to state 80
    constant_int     go to state 81


State 72

   60 exp: TOK_NOT . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 70
    TOK_MENOS                shift, and go to state 71
    TOK_NOT                  shift, and go to state 72
    TOK_TRUE                 shift, and go to state 73
    TOK_FALSE                shift, and go to state 74
    TOK_CONSTANTE_ENTERA     shift, and go to state 30
    TOK_IDENTIFICADOR        shift, and go to state 75

    vector_element   go to state 76
    exp              go to state 102
    fidf_funct_call  go to state 78
    constant         go to state 79
    constant_logic   go to state 80
    constant_int     go to state 81


State 73

   80 constant_logic: TOK_TRUE .

    $default  reduce using rule 80 (constant_logic)


State 74

   81 constant_logic: TOK_FALSE .

    $default  reduce using rule 81 (constant_logic)


State 75

   42 vector_element: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO
   61 exp: TOK_IDENTIFICADOR .
   67 fidf_funct_call: TOK_IDENTIFICADOR .

    TOK_CORCHETEIZQUIERDO  shift, and go to state 83

    TOK_PARENTESISIZQUIERDO  reduce using rule 67 (fidf_funct_call)
    $default                 reduce using rule 61 (exp)


State 76

   65 exp: vector_element .

    $default  reduce using rule 65 (exp)


State 77

   51 writing: TOK_PRINTF exp .
   53 exp: exp . TOK_MAS exp
   54    | exp . TOK_MENOS exp
   55    | exp . TOK_DIVISION exp
   56    | exp . TOK_ASTERISCO exp
   58    | exp . TOK_AND exp
   59    | exp . TOK_OR exp

    TOK_MAS        shift, and go to state 103
    TOK_MENOS      shift, and go to state 104
    TOK_ASTERISCO  shift, and go to state 105
    TOK_DIVISION   shift, and go to state 106
    TOK_AND        shift, and go to state 107
    TOK_OR         shift, and go to state 108

    $default  reduce using rule 51 (writing)


State 78

   66 exp: fidf_funct_call . TOK_PARENTESISIZQUIERDO exp_list TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 109


State 79

   62 exp: constant .

    $default  reduce using rule 62 (exp)


State 80

   78 constant: constant_logic .

    $default  reduce using rule 78 (constant)


State 81

   79 constant: constant_int .

    $default  reduce using rule 79 (constant)


State 82

   52 function_return: TOK_RETURN exp .
   53 exp: exp . TOK_MAS exp
   54    | exp . TOK_MENOS exp
   55    | exp . TOK_DIVISION exp
   56    | exp . TOK_ASTERISCO exp
   58    | exp . TOK_AND exp
   59    | exp . TOK_OR exp

    TOK_MAS        shift, and go to state 103
    TOK_MENOS      shift, and go to state 104
    TOK_ASTERISCO  shift, and go to state 105
    TOK_DIVISION   shift, and go to state 106
    TOK_AND        shift, and go to state 107
    TOK_OR         shift, and go to state 108

    $default  reduce using rule 52 (function_return)


State 83

   42 vector_element: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO . exp TOK_CORCHETEDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 70
    TOK_MENOS                shift, and go to state 71
    TOK_NOT                  shift, and go to state 72
    TOK_TRUE                 shift, and go to state 73
    TOK_FALSE                shift, and go to state 74
    TOK_CONSTANTE_ENTERA     shift, and go to state 30
    TOK_IDENTIFICADOR        shift, and go to state 75

    vector_element   go to state 76
    exp              go to state 110
    fidf_funct_call  go to state 78
    constant         go to state 79
    constant_logic   go to state 80
    constant_int     go to state 81


State 84

   40 assignment: TOK_IDENTIFICADOR TOK_ASIGNACION . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 70
    TOK_MENOS                shift, and go to state 71
    TOK_NOT                  shift, and go to state 72
    TOK_TRUE                 shift, and go to state 73
    TOK_FALSE                shift, and go to state 74
    TOK_CONSTANTE_ENTERA     shift, and go to state 30
    TOK_IDENTIFICADOR        shift, and go to state 75

    vector_element   go to state 76
    exp              go to state 111
    fidf_funct_call  go to state 78
    constant         go to state 79
    constant_logic   go to state 80
    constant_int     go to state 81


State 85

   31 statements: statement statements .

    $default  reduce using rule 31 (statements)


State 86

   32 statement: simple_statement TOK_PUNTOYCOMA .

    $default  reduce using rule 32 (statement)


State 87

   41 assignment: vector_element TOK_ASIGNACION . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 70
    TOK_MENOS                shift, and go to state 71
    TOK_NOT                  shift, and go to state 72
    TOK_TRUE                 shift, and go to state 73
    TOK_FALSE                shift, and go to state 74
    TOK_CONSTANTE_ENTERA     shift, and go to state 30
    TOK_IDENTIFICADOR        shift, and go to state 75

    vector_element   go to state 76
    exp              go to state 112
    fidf_funct_call  go to state 78
    constant         go to state 79
    constant_logic   go to state 80
    constant_int     go to state 81


State 88

   44 conditional: if_exp_stm TOK_ELSE . TOK_LLAVEIZQUIERDA statements TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 113


State 89

   45 if_exp_stm: if_exp statements . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 114


State 90

   47 loop: while_exp TOK_LLAVEIZQUIERDA . statements TOK_LLAVEDERECHA

    TOK_IF             shift, and go to state 38
    TOK_WHILE          shift, and go to state 39
    TOK_SCANF          shift, and go to state 40
    TOK_PRINTF         shift, and go to state 41
    TOK_RETURN         shift, and go to state 42
    TOK_IDENTIFICADOR  shift, and go to state 43

    statements        go to state 115
    statement         go to state 45
    simple_statement  go to state 46
    block             go to state 47
    assignment        go to state 48
    vector_element    go to state 49
    conditional       go to state 50
    if_exp_stm        go to state 51
    if_exp            go to state 52
    loop              go to state 53
    while_exp         go to state 54
    while             go to state 55
    reading           go to state 56
    writing           go to state 57
    function_return   go to state 58


State 91

   48 while_exp: while TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 70
    TOK_MENOS                shift, and go to state 71
    TOK_NOT                  shift, and go to state 72
    TOK_TRUE                 shift, and go to state 73
    TOK_FALSE                shift, and go to state 74
    TOK_CONSTANTE_ENTERA     shift, and go to state 30
    TOK_IDENTIFICADOR        shift, and go to state 75

    vector_element   go to state 76
    exp              go to state 116
    fidf_funct_call  go to state 78
    constant         go to state 79
    constant_logic   go to state 80
    constant_int     go to state 81


State 92

    1 program: TOK_MAIN TOK_LLAVEIZQUIERDA declarations er1 functions er2 statements TOK_LLAVEDERECHA .

    $default  reduce using rule 1 (program)


State 93

   27 function_param_identifier: TOK_IDENTIFICADOR .

    $default  reduce using rule 27 (function_param_identifier)


State 94

   26 function_param: type function_param_identifier .

    $default  reduce using rule 26 (function_param)


State 95

   19 fn_declarations: fn_name TOK_PARENTESISIZQUIERDO function_params TOK_PARENTESISDERECHO .

    $default  reduce using rule 19 (fn_declarations)


State 96

   24 remaining_function_params: TOK_PUNTOYCOMA . function_param remaining_function_params

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6

    type            go to state 63
    function_param  go to state 117


State 97

   22 function_params: function_param remaining_function_params .

    $default  reduce using rule 22 (function_params)


State 98

   46 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO exp . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA
   53 exp: exp . TOK_MAS exp
   54    | exp . TOK_MENOS exp
   55    | exp . TOK_DIVISION exp
   56    | exp . TOK_ASTERISCO exp
   58    | exp . TOK_AND exp
   59    | exp . TOK_OR exp
